--- a/blade-web/src/components/common/Form.module.scss
+++ b/blade-web/src/components/common/Form.module.scss
@@ -13,7 +13,7 @@
 }
 
 .input {
-  background-color: $dark-purple;
+  background-color: transparent;
   border: 3px solid $white;
   border-radius: 1rem;
   color: $white;
@@ -28,6 +28,6 @@
   &::placeholder {
     color: $white;
     font-style: italic;
-    opacity: 0.6;
+    opacity: 0.7;
   }
 }
