--- a/blade-web/src/scenes/GameSettings.module.scss
+++ b/blade-web/src/scenes/GameSettings.module.scss
@@ -18,6 +18,26 @@
   margin: 0 0 1rem 0;
 }
 
+.formGroup {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+}
+
+.playerToggle {
+  margin-bottom: 1.25rem;
+}
+
+.playerToggleButton {
+  background-color: transparent;
+  border: none;
+  color: $white;
+  font-size: 1.125rem;
+}
+
+.playerInputs {
+}
+
 .toggle {
   align-items: center;
   display: flex;
