--- a/blade-web/src/App.module.scss
+++ b/blade-web/src/App.module.scss
@@ -71,6 +71,10 @@ small {
 }
 
 button {
+  background-color: transparent;
+  border: none;
+  user-select: none;
+
   &:hover {
     cursor: pointer;
   }
@@ -82,6 +86,14 @@ button {
 
 a {
   color: $dark-purple;
+}
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .app {
