--- a/blade-web/src/scenes/GameSettings.module.scss
+++ b/blade-web/src/scenes/GameSettings.module.scss
@@ -28,20 +28,14 @@
   margin-bottom: 1.25rem;
 }
 
-.playerToggleButton {
-  background-color: transparent;
-  border: none;
-  color: $white;
-  font-size: 1.125rem;
-}
-
-.playerInputs {
-}
-
 .toggle {
   align-items: center;
   display: flex;
   margin-bottom: 1.25rem;
+}
+
+.toggleFinal {
+  margin-bottom: 1.75rem;
 }
 
 .toggleTitle {
